# mytender-backend

./: .gitignore  .pylintrc  Dockerfile  README.md  api.py  build_docs.sh  config.py  docker-compose.yml  main.py  okta_middleware.py  pyproject.toml  pytest.ini  reflash_company_library_chroma.py  reflash_tender_library_chroma.py  stress_test_outline_generation.py  utils.py
.github/: pull_request_template.md
.github/workflows/: deploy_app.yml  publish_sphinx.yml
Notebooks/: investigate.ipynb  llm.ipynb  mermaid.ipynb  mermaid.py  slack.ipynb  text_splitting.ipynb
Notebooks/testing_framework/: Benchmark.ipynb  Untitled.ipynb  current_rag.ipynb  output.txt
api_modules/: bid_enhancer.py  company_library.py  convert_html_to_docx.py  generate_proposal.py  proposal_outline.py  signup_stripe.py  tender_library.py  user_endpoints.py
api_modules/templates/: invite_email.html
docs/: 3b_prompt_variables.md  Makefile  README.md  build_docs.sh  deploy_docs.sh  rag_architecture_diagram.py  requirements.txt  serve_docs.sh
docs/source/: api.rst  api_endpoints.rst  architecture.rst  company_library.rst  conf.py  configuration.rst  deployment.rst  frontend_architecture.rst  frontend_state_management.rst  index.rst  models.rst  mongodb_schema.rst  prompts.rst  proposal_generation.rst  rag.rst  rag_architecture.rst  services.rst  signup_process.rst  tender_processing.rst  text_chunking.rst
docs/source/_static/: 3b_prompt_flow.py  chunking_diagram.py  react_component_hierarchy.py  react_state_management.py
fastapi_jwt_auth/: auth_config.py  auth_jwt.py  config.py  exceptions.py
services/: adjacent_chunk.py  chain.py  custom_mmr.py  diagram.py  embedding.py  helper.py  parser.py  slack.py  splitter.py  upload_tool.py  utils.py  vector_manager.py
services/chunking_search_queries_txts/: derive_insights_query.txt  evaluate_tender_query.txt  get_compliance_requirements_chunking_query.txt  summarise_tender_query.txt
services/prompts/: 2.txt  3a.txt  3b.txt  3b_assignment.txt  3b_case_study.txt  3b_commercial.txt  3b_compliance.txt  3b_personnel.txt  3b_technical.txt  add_statistics.txt  adding_case_study.txt  ask_tender_library_question.txt  bid_inputs_customer_painpoints.txt  bid_inputs_win_themes.txt  check_for_relevance.txt  check_for_relevance_with_subtopic.txt  chunk_title.txt  custom.txt  diagram.txt  differentiation_opportunities_summary.txt  evaluation_criteria_summary.txt  evidence_postprocess.txt  evidence_retrieval.txt  expand.txt  explain_how.txt  extract_differentiation_factors.txt  extract_section_compliance.txt  extract_section_derive_insights.txt  extract_section_evaluation_criteria.txt  generate_compliance_requirements.txt  generate_cover_letter.txt  generate_derive_insights.txt  generate_differentiation_competitors.txt  generate_differentiation_opp1.txt  generate_differentiation_opp2.txt  generate_differentiation_opportunities.txt  generate_differentiation_summary.txt  generate_evaluation_criteria.txt  generate_exec_summary.txt  generate_new_tone_of_voice.txt  (+25 more)
tests/: conftest.py  test_chroma.py  test_chroma_folder_tests.py  test_diagram.py  test_evidence_retrieval.py  test_generate_proposal.py  test_generate_templates.py  test_parser.py  test_prompt_results.py
tests/test_data/: test.xlsx  testdoc2.doc
